feature: file in the module recibos

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -161,7 +161,7 @@ import Card from '../components/Card.astro';
                         <div class="w-2/12">
                             <img width="25" height="25" src="https://img.icons8.com/emoji/48/check-mark-emoji.png" alt="check-mark-emoji"/>
                         </div>
-                        <p>Monitoreo en tiemlio real</p>
+                        <p>Monitoreo en tiempo real</p>
                     </li>
                     <li class="flex gap-2">
                         <div class="w-2/12">
@@ -193,7 +193,7 @@ import Card from '../components/Card.astro';
                         <div class="w-2/12">
                             <img width="20" height="20" src="https://img.icons8.com/ios-filled/50/000000/x.png" alt="x"/>
                         </div>
-                        <p>Acceso remoto desde disliositivos móviles</p>
+                        <p>Acceso remoto desde dispositivos móviles</p>
                     </li>
                     <li class="flex gap-2">
                         <div class="w-2/12">
