--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,10 +13,16 @@ const { title } = Astro.props;
 		<meta name="description" content="Astro description">
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
 	<body class="">
 		<slot />
+
+        <script is:inline src="https://unpkg.com/aos@next/dist/aos.js"></script>
+            <script is:inline>
+              AOS.init();
+            </script>
 	</body>
 </html>
