--- a/src/pages/diseweb.astro
+++ b/src/pages/diseweb.astro
@@ -1,16 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="description" content="Astro description">
-		<meta name="viewport" content="width=device-width">
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg">
-		<meta name="generator" content="Astro v2.10.14">
-		<title>Welcome to Astro.</title>
-	<link rel="stylesheet" href="/_astro/ciaz.e619b5cc.css" /><script type="module">var c=new Date("September 31, 2023 23:59:59").getTime(),d=setInterval(function(){var n=new Date().getTime(),e=c-n,t=Math.floor(e%(1e3*60*60*24)/(1e3*60*60)),o=Math.floor(e%(1e3*60*60)/(1e3*60)),r=Math.floor(e%(1e3*60)/1e3);let a=`${t} : ${o} : ${r}`;document.getElementById("countdown").innerHTML=a,e<0&&(clearInterval(d),document.getElementById("countdown").innerHTML="¡El contador ha terminado!")},1e3);
-</script></head>
-	<body class="">
-		
+---
+import Layout from '../layouts/Layout.astro';
+import Card from '../components/Card.astro';
+---
+
+<Layout title="Welcome to Astro.">
     <header class="h-20 flex justify-center items-center mb-2 shadow bg-purple-700/90 fixed left-0 right-0 top-0">
         <div class="w-full flex flex-col md:flex-row gap-2 justify-center items-center">
             <!-- <p class="text-white text-3xl">Safepp</p> -->
@@ -24,25 +17,25 @@
         <section class="w-full flex flex-col md:flex-row justify-center items-center gap-3 h-screen">
             <div class="w-full flex flex-col justify-center items-center h-full">
                <div class="w-10/12 flex flex-col gap-4 justify-center">
-                    <h1 class="text-black text-5xl font-bold uppercase">Rondas Seguras y Eficientes</h1>
-                    <p class="text-gray-700">Descubre una innovación en seguridad: nuestra aplicación redefine las rondas de los guardias, elevando la eficiencia y garantizando la seguridad en todo momento. Un cambio revolucionario en la gestión de la seguridad.</p>
+                    <h1 class="text-black text-5xl font-bold uppercase">Potencia tus Clientes con Landing Pages de Alto Impacto</h1>
+                    <p class="text-gray-700">¡Impulsa tu negocio al siguiente nivel con nuestras Landing Pages de Alto Impacto! Sabemos lo crucial que es captar la atención de tus potenciales clientes y convertirlos en ventas reales. Nuestras Landing Pages han sido diseñadas para atraer y cautivar a tu audiencia de principio a fin.</p>
                     <div>
-                        <button class="px-4 py-3 bg-purple-700 text-white text-sm font-bold rounded-md uppercase">Potencia Tu Empresa Hoy</button>
+                        <button class="px-4 py-3 bg-purple-700 text-white text-sm font-bold rounded-md uppercase">Contactanos</button>
                     </div>
                </div>
             </div>
             <div class="w-full h-full flex justify-center items-center">
                 <div class="w-10/12">
-                    <img class="rounded-xl w-full h-full" src="https://previews.123rf.com/images/sylverarts/sylverarts2204/sylverarts220400364/185530938-palabras-de-dise%C3%B1o-gr%C3%A1fico-con-l%C3%A1piz-en-lugar-de-letra-i-dise%C3%B1ador-y-artista-logotipo-creativo.jpg" alt="">
+                    <img class="rounded-xl w-full h-full" src="https://www.inboundcycle.com/hubfs/landing-page-captaci%C3%B3n-de-leads-1.png" alt="">
                 </div>
             </div>
         </section>
         <div class="py-4 text-gray-400 uppercase flex flex-col md:flex-row gap-6 justify-center items-center font-bold">
-            <p>NOVASEP</p>
-            <p>SEGURIDAD SUPERIOR</p>
-            <p>SIETE24</p>
-            <p>OMNITEMPUS</p>
-            <p>MIRO SEGURIDAD</p>
+            <p>WEBs</p>
+            <p>LANDING PAGES</p>
+            <p>ECOMERCE</p>
+            <p>WEBS INSTITUCIONALES</p>
+            <p>CHATBOTS</p>
             <p>ATLAS</p>
         </div>
         <section class="w-full flex flex-col md:flex-row justify-center items-center gap-3 h-full">
@@ -162,25 +155,25 @@
                 <ul class="w-full flex flex-col gap-3">
                     <li class="flex gap-2">
                         <div class="w-2/12">
-                            <img width="25" height="25" src="https://img.icons8.com/emoji/48/check-mark-emoji.png" alt="check-mark-emoji">
+                            <img width="25" height="25" src="https://img.icons8.com/emoji/48/check-mark-emoji.png" alt="check-mark-emoji"/>
                         </div>
                         <p>Asignación de rutas</p>
                     </li>
                     <li class="flex gap-2">
                         <div class="w-2/12">
-                            <img width="25" height="25" src="https://img.icons8.com/emoji/48/check-mark-emoji.png" alt="check-mark-emoji">
+                            <img width="25" height="25" src="https://img.icons8.com/emoji/48/check-mark-emoji.png" alt="check-mark-emoji"/>
                         </div>
                         <p>Monitoreo en tiempo real</p>
                     </li>
                     <li class="flex gap-2">
                         <div class="w-2/12">
-                            <img width="25" height="25" src="https://img.icons8.com/emoji/48/check-mark-emoji.png" alt="check-mark-emoji">
+                            <img width="25" height="25" src="https://img.icons8.com/emoji/48/check-mark-emoji.png" alt="check-mark-emoji"/>
                         </div>
                         <p>Registro de incidencias</p>
                     </li>
                     <li class="flex gap-2">
                         <div class="w-2/12">
-                            <img width="25" height="25" src="https://img.icons8.com/emoji/48/check-mark-emoji.png" alt="check-mark-emoji">
+                            <img width="25" height="25" src="https://img.icons8.com/emoji/48/check-mark-emoji.png" alt="check-mark-emoji"/>
                         </div>
                         <p>Alertas de seguridad</p>
                     </li>
@@ -188,25 +181,25 @@
                 <ul class="w-full flex flex-col gap-3">
                     <li class="flex gap-2">
                         <div class="w-2/12">
-                            <img width="25" height="25" src="https://img.icons8.com/emoji/48/check-mark-emoji.png" alt="check-mark-emoji">
+                            <img width="25" height="25" src="https://img.icons8.com/emoji/48/check-mark-emoji.png" alt="check-mark-emoji"/>
                         </div>
                         <p>Generación de informes detallados</p>
                     </li>
                     <li class="flex gap-2">
                         <div class="w-2/12">
-                            <img width="25" height="25" src="https://img.icons8.com/emoji/48/check-mark-emoji.png" alt="check-mark-emoji">
+                            <img width="25" height="25" src="https://img.icons8.com/emoji/48/check-mark-emoji.png" alt="check-mark-emoji"/>
                         </div>
                         <p>Integración con sistemas de videovigilancia y alarmas</p>
                     </li>
                     <li class="flex gap-2">
                         <div class="w-2/12">
-                            <img width="20" height="20" src="https://img.icons8.com/ios-filled/50/000000/x.png" alt="x">
+                            <img width="20" height="20" src="https://img.icons8.com/ios-filled/50/000000/x.png" alt="x"/>
                         </div>
                         <p>Acceso remoto desde dispositivos móviles</p>
                     </li>
                     <li class="flex gap-2">
                         <div class="w-2/12">
-                            <img width="20" height="20" src="https://img.icons8.com/ios-filled/50/000000/x.png" alt="x">
+                            <img width="20" height="20" src="https://img.icons8.com/ios-filled/50/000000/x.png" alt="x"/>
                         </div>
                         <p>Interfaz intuitiva y fácil de usar.</p>
                     </li>
@@ -220,5 +213,36 @@
         </section>
 
 	</main>
+</Layout>
 
-	</body></html>
+
+<script>
+// Fecha de finalización del contador
+var countDownDate = new Date("September 31, 2023 23:59:59").getTime();
+
+// Actualiza el contador cada segundo
+var countdown = setInterval(function() {
+  // Obtiene la fecha y hora actual
+  var now = new Date().getTime();
+
+  // Calcula la diferencia entre la fecha final y la actual
+  var difference = countDownDate - now;
+
+  // Calcula los días, horas, minutos y segundos restantes
+  var days = Math.floor(difference / (1000 * 60 * 60 * 24));
+  var hours = Math.floor((difference % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+  var minutes = Math.floor((difference % (1000 * 60 * 60)) / (1000 * 60));
+  var seconds = Math.floor((difference % (1000 * 60)) / 1000);
+
+  // Muestra la cuenta regresiva en el elemento con el id "countdown"
+  // let time = days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
+  let time = `${hours} : ${minutes} : ${seconds}`;
+  document.getElementById("countdown").innerHTML = time;
+
+  // Si el contador ha terminado, muestra un mensaje
+  if (difference < 0) {
+    clearInterval(countdown);
+    document.getElementById("countdown").innerHTML = "¡El contador ha terminado!";
+  }
+}, 1000);
+</script>
